# openwrt-wg-nord

./: Cargo.toml  README.md
openwrt-feed/luci/luci-app-nordvpn/: Makefile
openwrt-feed/luci/luci-app-nordvpn/htdocs/luci-static/resources/view/: nordvpn.js
openwrt-feed/luci/luci-app-nordvpn/root/usr/share/luci/menu.d/: luci-app-nordvpn.json
openwrt-feed/luci/luci-app-nordvpn/root/usr/share/rpcd/acl.d/: luci-app-nordvpn.json
openwrt-feed/net/nordvpn-wireguard/: Makefile
openwrt-feed/net/nordvpn-wireguard/files/etc/config/: nordvpn
openwrt-feed/net/nordvpn-wireguard/files/etc/init.d/: nordvpn
openwrt-feed/net/nordvpn-wireguard/files/etc/uci-defaults/: 99-nordvpn-cron
openwrt-feed/net/nordvpn-wireguard/files/usr/libexec/: nordvpn-refresh
openwrt-feed/net/nordvpn-wireguard/files/usr/sbin/: nordvpnctl
openwrt-feed/utils/wg-nord/: Makefile
